--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,9 +7,25 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <div class="dashboard-container">
-        <h1>Welcome to the Dashboard <span style="color:#00A97F ;"><%= userName %></span>!</h1>
-        <p>You have successfully completed the registration.</p>
+    <%- include('_navbar') %>
+    <div class="container">
+        <div class="dashboard-container">
+            <h1>Welcome to the AudioHunt <span style="color:#1cb955 ;"><%= userName %></span>!</h1>
+            <p>Discover a vast world of music and embark on an auditory adventure. Dive deep into your favorite genres, uncover hidden gems, and explore the rhythms and melodies that move you. With our powerful search capabilities, you can effortlessly hunt for tracks, artists, and albums that match your unique taste. Whether you're seeking the latest hits or timeless classics, your journey through the soundscape starts here. Enjoy a seamless and enriching experience as you explore and hunt for the perfect audio to match your mood.</p>
+            <form id="logout-form" action="/logout" method="POST">
+                <button type="submit" class="Btn">
+                    <div class="sign">
+                      <svg viewBox="0 0 512 512">
+                        <path
+                          d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
+                        ></path>
+                      </svg>
+                    </div>
+                  
+                    <div class="text">Logout</div>
+                  </button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
